Fix wrapping on review line item

--- a/assets/src/styles/tw.css
+++ b/assets/src/styles/tw.css
@@ -8,6 +8,7 @@ summary::-webkit-details-marker {
 
 .break-words {
   overflow-wrap: break-word;
+  word-break: break-word;
   word-wrap: break-word;
 }
 
